06-organization-and-modules/web-app-module/database.tf
		resource "aws_db_instance" "db_instance" {
		  allocated_storage = 10
		  # This allows any minor version within the major engine_version
		  # defined below, but will also result in allowing AWS to auto
		  # upgrade the minor version of your DB. This may be too risky
		  # in a real production environment.
		  auto_minor_version_upgrade = true
		  storage_type               = "standard"
		  engine                     = "postgres"
		  engine_version             = "12"
		  instance_class             = "db.t4g.micro"
		  name                       = var.db_name
		  username                   = var.db_user
		  password                   = var.db_pass
		  skip_final_snapshot        = true
}
